Implementando o swagger e ajustando o metodo editarPessoa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #http://localhost:8080/h2-console/
